--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "dependencies": {
     "body-parser": "^1.18.2",
     "express": "^4.16.2",
+    "firebase-admin": "^5.9.1",
     "querystring": "^0.2.0",
     "request": "^2.83.0",
     "stripe": "^5.5.0"
