--- a/package.json
+++ b/package.json
@@ -25,8 +25,10 @@
   "dependencies": {
     "express": "^4.16.2",
     "request": "^2.83.0",
-    "firebase-admin": "^5.9.1",
-    "firebase": "^4.10.1"
+    "firebase-admin":"^5.9.1",
+    "firebase":"^4.10.1",
+    "querystring":"^0.2.0"
   },
-  "devDependencies": {}
+  "devDependencies": {
+  }
 }
