--- a/package.json
+++ b/package.json
@@ -23,12 +23,25 @@
   },
   "homepage": "https://www.leahxia.com/share-washi/stripe",
   "dependencies": {
+    "body-parser": "^1.18.2",
     "express": "^4.16.2",
+    "querystring": "^0.2.0",
     "request": "^2.83.0",
-    "firebase-admin":"^5.9.1",
-    "firebase":"^4.10.1",
-    "querystring":"^0.2.0"
+    "stripe": "^5.5.0",
+    "firebase": "^4.10.1",
+    "firebase-admin": "^5.9.1"
   },
   "devDependencies": {
+    "babel-cli": "^6.26.0",
+    "babel-core": "^6.26.0",
+    "babel-eslint": "^8.2.2",
+    "babel-loader": "^7.1.3",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
+    "babel-preset-stage-2": "^6.24.1",
+    "eslint": "^4.18.1",
+    "eslint-plugin-react": "^7.7.0",
+    "webpack": "^3.11.0",
+    "webpack-dev-server": "^3.1.0"
   }
 }
